# qeu-bundling-system

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.batch  HANDOFF.md  README.md  app.py  easy_run.bat  main.py  new_results.bat  odoo_products.xlsx  pyproject.toml  pytest.ini  requirements.api.txt  requirements.batch.txt  requirements.txt  run_me.py  run_pipeline.bat  run_presentation.bat  usage_summary.bat
.sisyphus/: boulder.json
data/: SENSITIVE_DATA_PLACEHOLDERS.md  arabic_translations_cache.json  artifact_sizes.csv  copurchase_scores.csv  product_categories.csv  product_families.json  product_recipe_scores.csv  recipe_data.json  saudi_cuisine_data.json  top_bundles.csv  top_product_ids.json
docs/: AI_CONTEXT.md  ARCHITECTURE.md  AWS_DEPLOYMENT_PLAN.md  AWS_INFRA_V1.md  ENVIRONMENT_VARIABLES.md  ROADMAP.md  SERVING_LATENCY_REPORT.md  intent_personalization_25_user_eval_2026-03-15.md  operations.md  recovery_75c26f2_item_reuse_fix.md  recovery_75c26f2_latency_report.md
legacy/: README.md
prompts/: cursor_prompt_1.md  cursor_prompt_2.md  cursor_prompt_3.md  cursor_prompt_4.md  cursor_prompt_5.md
qeu_bundling/: __init__.py
scripts/: easy_run.bat  easy_run.command  localhost_fast_5000.bat  localhost_fast_5000.command  localhost_full_5000.bat  localhost_full_5000.command  materialize_bundle_universe.py  network_share_5000.bat  network_share_5000.command  run_api.py  run_pipeline.py  validate_serving_output.py
src/: 00_extract_campaigns.py  01_load_data.py  02_embeddings.py  03_copurchase.py  04_categories.py  05_recipe_scoring.py  (+10 more)
(+174 files in other folders)
